[package]
name = "ls-effector-cid"
version = "0.1.4"
edition = "2021"
build = "built.rs"
publish = true
include = ["src", "built.rs", "Cargo.toml", "artifacts"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[build-dependencies]
built = "0.7.0"
